--- a/TODO
+++ b/TODO
@@ -9,6 +9,6 @@ OpenBGPd/OpenOSPFd support
 Chat Room for website
 Wizards
 
-Goal is to be around 6.0 megs, only webui configurable..
+Goal is to be under 10.0 megs.
 
 
